--- a/wercker.yml
+++ b/wercker.yml
@@ -1,6 +1,6 @@
 #Use OpenJDK base docker image from dockerhub and open the application port on the docker container
 box:
-  id: openjd
+  id: openjdk
   ports:
     -$PORT
     
